--- a/TETI/aula_24-10-03.ipynb
+++ b/TETI/aula_24-10-03.ipynb
@@ -1418,17 +1418,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "id": "b8c0df7f-b116-4cc5-aeb9-a247c422194f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Salve_Aqui_Seus_Arquivos\\\\DIOGO\\\\TADS42\\\\TETI'"
+       "'C:\\\\Users\\\\josed\\\\TADS42\\\\TETI'"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
