corrigidas referências do path_local para computador do IFAM e computador de casa em todas as aulas

--- a/TETI/aula_24-10-03.ipynb
+++ b/TETI/aula_24-10-03.ipynb
@@ -1439,17 +1439,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "id": "edafa773-6539-46cf-bed6-34e58c0425cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'D:/Salve_Aqui_Seus_Arquivos/DIOGO/TADS42/TETI/'"
+    "# computador do IFAM\n",
+    "path_local = 'D:/Salve_Aqui_Seus_Arquivos/DIOGO/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 19,
+   "id": "d03ae026-f0de-4b49-9279-78e3b9bc8100",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# computador de casa\n",
+    "path_local = 'C:/Users/josed/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d00f1650-5e93-4eae-9fdf-c51e3ed93037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_csv = path_local + 'TADS42/TETI/databases_csv/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "6771a74b-bae1-4c3f-a086-92d0074435d6",
    "metadata": {},
    "outputs": [],
@@ -1460,17 +1482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "id": "59543393-88c0-4ede-a339-18274abd4e50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_mkt = pd.read_csv(path+'dados_marketing.csv')"
+    "df_mkt = pd.read_csv(path_csv + 'dados_marketing.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "id": "1bed8866-a8bd-40c7-babb-43b00793656f",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1621,7 @@
        "4   10000    2614.500         Nenhuma  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1610,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 24,
    "id": "26d0919a-896e-47c2-b2ce-dfa4e059e25d",
    "metadata": {},
    "outputs": [
@@ -1620,7 +1642,7 @@
        "(182, 11)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 25,
    "id": "122594dd-bf8f-451d-8c0a-19129b5a56e6",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 26,
    "id": "989e8b5f-d3a1-4ff7-b801-12b79adcfe63",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1838,7 @@
        "max    4139.000000  36283.000000  4535.375000  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1824,14 +1846,6 @@
    "source": [
     "df_mkt.describe()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1723ced7-4140-4c64-9b13-ee9fbbe1c37a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
