melhorada atividade de teti

--- a/TETI/Atividade02_selecionar-cor.ipynb
+++ b/TETI/Atividade02_selecionar-cor.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "b13e5c71-d846-4884-bc8c-57837a110778",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Escolha a cor: p\n"
+      "Escolha a cor: b\n"
      ]
     }
    ],
