Aula do dia 29/10/2024, PDM, Aplicativo Send Message

--- a/PDM/SendMessage/app/src/main/res/values/strings.xml
+++ b/PDM/SendMessage/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Send Message</string>
+    <string name="message_write_message">Write a Message</string>
+    <string name="button_send">Send</string>
 </resources>
