aplicativo sendmessage continuação

--- a/PDM/SendMessage/app/src/main/res/values-pt-rBR/strings.xml
+++ b/PDM/SendMessage/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Enviar Mensagens</string>
-    <string name="message_write_message">Escreva uma mensagem</string>
+    <string name="message_write_message">Escreva a primeira mensagem</string>
     <string name="button_send">Enviar</string>
+    <string name="message_write_message_2">Escreva a segunda mensagem</string>
+    <string name="message_write_message_3">Escreva a terceira mensagem</string>
 </resources>
