adicionada aula do dia 27/11/2024

--- a/TETI/aula_24-11-25.ipynb
+++ b/TETI/aula_24-11-25.ipynb
@@ -221,7 +221,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
+      "Epoch 1/10\n",
+      " 7/10 [====================>.........] - ETA: 2:25 - loss: 2.4683 - accuracy: 0.7252"
      ]
     }
    ],
