--- a/PDM/Recycler/app/src/main/res/values/strings.xml
+++ b/PDM/Recycler/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Recycler</string>
+    <string name="res_codigo">Code</string>
+    <string name="res_name">Name</string>
+    <string name="res_telefone">Phone</string>
+    <string name="res_email">E-mail</string>
+    <string name="res_address">Address</string>
 </resources>
