atualizando simulado de DRA

--- a/TETI/aula_24-11-04.ipynb
+++ b/TETI/aula_24-11-04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "05a0fab7-0b5d-4d23-8214-5ce717e23860",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7c477c00-381d-477b-8cc6-84afc2457086",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "c365bbb3-5c0d-474f-b355-29cfa1c1dde5",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "84544fb4-bbf2-40b5-8ad5-f3351bebcb64",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "fd601b49-2b13-4b70-9642-3716152c4910",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f45048df-3ce5-425b-890b-75ded2190638",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
     "    elif modo == 'laplace':\n",
     "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "        frame_alterado = cv2.filter2D(gray, -1, k_laplace)\n",
-    "    elif modo == 'k2:\n",
+    "    elif modo == 'k2':\n",
     "        frame_alterado = im_filtro_k1 = cv2.filter2D(im_ag, -1, k2)\n",
     "    else:\n",
     "        frame_alterado = frame\n",
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
